[gd_scene load_steps=9 format=2]

[ext_resource path="res://Animacao/Inimigos/Espinho/EspinhoLevantando.tres" type="Animation" id=1]
[ext_resource path="res://Animacao/Inimigos/Espinho/EspinhoLevantado.tres" type="Animation" id=2]
[ext_resource path="res://Animacao/Inimigos/Espinho/Abaixado.tres" type="Animation" id=3]
[ext_resource path="res://Animacao/Inimigos/Espinho/EspinhoDescendo.tres" type="Animation" id=4]
[ext_resource path="res://Scripts/Inimigos/Espinhos.gd" type="Script" id=5]
[ext_resource path="res://Assets/Inimigos/espinhos/inimigos-espinho0000.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 11.7333, 3.16478 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 42.5743, 3.88792 )

[node name="Espinhos" type="Node2D"]
scale = Vector2( 3, 3 )
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 6 )

[node name="Animacao" type="AnimationPlayer" parent="."]
anims/Abaixado = ExtResource( 3 )
anims/EspinhoDescendo = ExtResource( 4 )
anims/EspinhoLevantado = ExtResource( 2 )
anims/EspinhoLevantando = ExtResource( 1 )

[node name="DetectorPerc" type="Area2D" parent="."]
collision_layer = 1024
collision_mask = 1024

[node name="Shape" type="CollisionShape2D" parent="DetectorPerc"]
position = Vector2( -1.027, 0 )
shape = SubResource( 1 )
disabled = true
one_way_collision = true

[node name="DetectorArea" type="Area2D" parent="."]
collision_layer = 2048
collision_mask = 2048

[node name="Shape" type="CollisionShape2D" parent="DetectorArea"]
position = Vector2( -1.10957, -10.5408 )
shape = SubResource( 2 )
[connection signal="body_entered" from="DetectorPerc" to="." method="_on_DetectorPerc_body_entered"]
[connection signal="body_entered" from="DetectorArea" to="." method="_on_DetectorArea_body_entered"]
[connection signal="body_exited" from="DetectorArea" to="." method="_on_DetectorArea_body_exited"]
